# smartdoorlock

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
.github/workflows/: build-android.yml
51单片机端/App/: MatrixKeyApp.c  MatrixKeyApp.h  UartApp.c  UartApp.h
51单片机端/Hardware/: AT24C02.c  AT24C02.h  Font_16x16.h  MatrixKey.c  MatrixKey.h  OLED.c  OLED.h  Uart.c  Uart.h
51单片机端/Project/: Project.uvproj  main.c  main.h
51单片机端/Protocol/: I2C.c  I2C.h
51单片机端/System/: Delay.c  Delay.h  Scheduler.c  Scheduler.h
51单片机端/Tools/: gen_font.py
android_app/: build.gradle.kts  gradle.properties  settings.gradle.kts
android_app/.github/workflows/: build.yml
android_app/app/: build.gradle.kts  proguard-rules.pro
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/java/com/smartdoorlock/app/: BleManager.kt  DoorLockApi.kt  MainActivity.kt
android_app/app/src/main/java/com/smartdoorlock/app/ui/: LoginScreen.kt  MainScreen.kt
main/: CMakeLists.txt  main.c
main/drivers/: ble_driver.c  ble_driver.h
main/hardware/: uart_hw.c  uart_hw.h
main/services/: uart_service.c  uart_service.h
tools/: ble_test.py  ble_uart_assistant.py  phone_web.html  requirements.txt
tools/ble_uart/: __init__.py  __main__.py  bus.py  constants.py  core.py
web_app/: docker-compose.yml
web_app/backend/: Dockerfile  main.py  requirements.txt
